[package]
name = "linux-video-cli"
description = "Linux video device interfacing (utils)"
version = "0.1.0"
categories = ["command-line-utilities"]
keywords = ["v4l", "v4l2", "video", "linux", "ioctl"]
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "video-cli"
path = "src/main.rs"

[dependencies.linux-video]
path = ".."
version = "0.1.0"
default-features = false
features = ["clap"]

[dependencies.clap]
version = "4"
features = ["std", "derive"]
