[package]
name = "linux-video-core"
description = "Linux V4L2 device interfacing"
version = "0.1.1"
categories = ["os", "os::linux-apis"]
keywords = ["v4l", "v4l2", "video", "linux", "ioctl"]

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies.bitmask-enum]
version = "2"

[dependencies.nix]
version = "0.26"
default-features = false
features = ["ioctl", "mman"]

[dependencies.getset]
version = "0.1"

[dependencies.parse-display]
version = "0.8"

[dependencies.clap]
version = "4"
default-features = false
features = ["std", "derive"]
optional = true

[dependencies.serde]
version = "1"
default-features = false
features = ["std", "derive"]
optional = true

[dependencies.drm-fourcc]
version = "2"
optional = true

[dependencies.dcv-color-primitives]
version = "0.5"
optional = true

[features]
default = []
thread-safe = []
