[package]
name = "tokio-linux-video"
description = "Linux V4L2 device interfacing with tokio"
version = "0.1.1"
categories = ["os", "os::linux-apis", "asynchronous"]
keywords = ["v4l", "v4l2", "linux", "async", "tokio"]

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies.linux-video-core]
path = "../core"
version = "0.1.1"
default-features = false

[dependencies.tokio]
version = "1"
default-features = false
features = ["fs", "io-util", "rt", "net"]

[dev-dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dev-dependencies.image]
version = "0.24"

[features]
default = []
full = ["clap", "serde", "drm-fourcc", "dcv-color-primitives"]
clap = ["linux-video-core/clap"]
serde = ["linux-video-core/serde"]
drm-fourcc = ["linux-video-core/drm-fourcc"]
dcv-color-primitives = ["linux-video-core/dcv-color-primitives"]
thread-safe = ["linux-video-core/thread-safe"]
test-vivid = []
